k8s/yaml/k8s.service.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-dockerapp
spec:
  type: LoadBalancer
  selector:
    app: dockerapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32767
